# Fancy-Music-Downloader

./: .gitignore  README.md  bot.py  bot.service  main.py  pyproject.toml
src/: config.py  converter.py  downloader.py  metadata.py  sheets.py  utils.py
